syntax = "proto3";

package customer.v1;

option go_package = "github.com/0utl1er-tech/phox-customer/gen/pb/customer/v1;customerv1";

// Book関連のメッセージ
message Book {
  string id = 1;
  string name = 2;
  string role = 3;
  string created_at = 4;
}

// Book一覧取得リクエスト
message GetBooksByUserIDRequest {
  // ユーザーIDは認証middlewareから取得するため、リクエストには含めない
}

// Book一覧取得レスポンス
message GetBooksByUserIDResponse {
  repeated Book books = 1;
}

// 特定のBook取得リクエスト
message GetBookByIDRequest {
  string book_id = 1;
}

// 特定のBook取得レスポンス
message GetBookByIDResponse {
  Book book = 1;
}

// Book作成リクエスト
message CreateBookRequest {
  string name = 1;
}

// Book作成レスポンス
message CreateBookResponse {
  string id = 1;
  string name = 2;
}
